--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">たいき大馬鹿</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">馬鹿者とは</a>
+        <a href="#" class="login">タイキである</a>
       </div>
     </div>
   </header>
@@ -82,8 +82,7 @@
   </div>
   <footer>
     <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
+      <p>大変申し訳ございません</p>
     </div>
   </footer>
 </body>
